<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="top"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/shape_pill_solid"
            android:backgroundTint="@color/brand_ink">

            <com.example.kendaraanbp1.ui.widget.DTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/step_number_1"
                android:textAppearance="@style/TextAppearance.DriveTrack.LabelBold"
                android:textColor="@color/white"
                app:lineHeightSp="16" />
        </FrameLayout>

        <com.example.kendaraanbp1.ui.widget.DTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_4"
            android:text="@string/step_basic_info"
            android:textAppearance="@style/TextAppearance.DriveTrack.LabelBold"
            android:textColor="@color/text_primary"
            app:lineHeightSp="16" />
    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_gravity="top"
        android:layout_marginTop="@dimen/spacing_16"
        android:layout_weight="1"
        android:background="@color/brand_ink" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/shape_pill_solid"
            android:backgroundTint="@color/border_card">

            <com.example.kendaraanbp1.ui.widget.DTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/step_number_2"
                android:textAppearance="@style/TextAppearance.DriveTrack.LabelBold"
                android:textColor="@color/text_secondary"
                app:lineHeightSp="16" />
        </FrameLayout>

        <com.example.kendaraanbp1.ui.widget.DTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_4"
            android:text="@string/step_detail"
            android:textAppearance="@style/TextAppearance.DriveTrack.LabelBold"
            android:textColor="@color/text_secondary"
            app:lineHeightSp="16" />
    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_gravity="top"
        android:layout_marginTop="@dimen/spacing_16"
        android:layout_weight="1"
        android:background="@color/border_card" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/shape_pill_solid"
            android:backgroundTint="@color/border_card">

            <com.example.kendaraanbp1.ui.widget.DTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/step_number_3"
                android:textAppearance="@style/TextAppearance.DriveTrack.LabelBold"
                android:textColor="@color/text_secondary"
                app:lineHeightSp="16" />
        </FrameLayout>

        <com.example.kendaraanbp1.ui.widget.DTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_4"
            android:text="@string/step_done"
            android:textAppearance="@style/TextAppearance.DriveTrack.LabelBold"
            android:textColor="@color/text_secondary"
            app:lineHeightSp="16" />
    </LinearLayout>
</LinearLayout>
